@@ -36,18 +36,8 @@
 						<p>
 						<ol type="I">
 							<li><b>Download and unzip NUnitAsp.</b>
-						  <li><b>Install NUnit 2.0.</b>
-							<li><b>Create an NUnitAsp virtual directory in IIS.</b></li>
-							<li><b>Test the installation.</b>
-						</ol>
-						</p>
-
-						<p>Here's a more detailed description of those steps:</p>
-
-						<p>
-						<ol type="I">
-							<li><b>Download and unzip NUnitAsp.</b>
 							<ol>
+							  <li>You've probably already done this step, but if not, read on.</li>
 								<li>NUnitAsp may be downloaded from the NUnitAsp home page, <a href="http://nunitasp.sourceforge.net">nunitasp.sourceforge.net</a>.</li>
 								<li>Unzip the NUnitAsp package into a directory of your choice, such as "C:\Program Files\NUnitAsp"</li>
 							</ol></li>
@@ -55,7 +45,7 @@
 							<br />
 							<li><b>Install NUnit 2.0.</b>
 							<ol>
-								<li>Double-click the Nunit.msi installation file in the bin directory and follow the directions.</li>
+								<li>We include an install file for NUnit 2.0 in the NUnitAsp distribution.  It's in the bin directory.  (For example, if you unzipped NUnitAsp into C:\Program Files\NUnitAsp, it's in C:\Program Files\NUnitAsp\bin.)</li>
 							</ol>
 
 							<br />
@@ -75,7 +65,9 @@
 							<br />
 							<li><b>Test Installation.</b>
 							<ol>
-								<li>Verify that you can visit <a href="http://localhost/NUnitAsp/web/dtd/xhtml1-transitional.dtd">http://localhost/NUnitAsp/web/dtd/xhtml1-transitional.dtd</a>.  <b>Note:</b> If you have XMLSpy installed, you may get a false error during this step.  See below.</li>
+								<li>Verify that you can visit <a href="http://localhost/NUnitAsp/web/dtd/xhtml1-transitional.dtd">http://localhost/NUnitAsp/web/dtd/xhtml1-transitional.dtd</a>.
+								<br /><b>Note:</b> If you have XMLSpy installed, you may get a false error during this step.  See below.
+								<br /><b>Note 2:</b> Some browsers, including Netscape and Phoenix, display a download window rather than showing you the DTD.  This is also a sign of success.</li>
 							</ol></li>
 						</ol>
 						</p>
