@@ -1,3 +1,8 @@
+Changes in CVS:
+Produced by Jim Little.
+* Updated installation guide in response to user comments.  Credit to Jim Little.
+
+
 Changes in NUnitAsp 1.3:
 Produced by Jim Little.
 * Browser.ElapsedServerTime now works.  Credit to Jim Little.
